subtask 3.3.4
